@@ -1,15 +1,17 @@
 package net.thisptr.java.prometheus.metrics.agent;
 
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.io.StringWriter;
+import java.io.PrintWriter;
 import java.lang.management.ManagementFactory;
+import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.TimeUnit;
@@ -21,8 +23,10 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.NullNode;
 import com.google.common.base.Joiner;
 
-import fi.iki.elonen.NanoHTTPD.IHTTPSession;
-import fi.iki.elonen.NanoHTTPD.Response;
+import io.undertow.server.HttpHandler;
+import io.undertow.server.HttpServerExchange;
+import io.undertow.util.Headers;
+import io.undertow.util.StatusCodes;
 import net.thisptr.jackson.jq.JsonQuery;
 import net.thisptr.java.prometheus.metrics.agent.config.Config.OptionsConfig;
 import net.thisptr.java.prometheus.metrics.agent.config.Config.PrometheusScrapeRule;
@@ -31,14 +35,14 @@ import net.thisptr.java.prometheus.metrics.agent.scraper.Scraper;
 /**
  * https://github.com/prometheus/docs/blob/master/content/docs/instrumenting/exposition_formats.md
  */
-public class PrometheusExporterServerHandler {
+public class PrometheusExporterHttpHandler implements HttpHandler {
 	private static final ObjectMapper MAPPER = new ObjectMapper();
 
 	private final Scraper<PrometheusScrapeRule> scraper;
 	private final JsonQuery labels;
 	private final OptionsConfig options;
 
-	public PrometheusExporterServerHandler(final List<PrometheusScrapeRule> rules, final JsonQuery labels, final OptionsConfig options) {
+	public PrometheusExporterHttpHandler(final List<PrometheusScrapeRule> rules, final JsonQuery labels, final OptionsConfig options) {
 		this.labels = labels;
 		this.options = options;
 		this.scraper = new Scraper<>(ManagementFactory.getPlatformMBeanServer(), rules);
@@ -59,25 +63,36 @@ public class PrometheusExporterServerHandler {
 		}
 	}
 
-	private OptionsConfig getOptions(final IHTTPSession session) {
+	private OptionsConfig getOptions(final HttpServerExchange exchange) {
 		final OptionsConfig options = new OptionsConfig();
+		options.includeTimestamp = this.options.includeTimestamp;
+		options.minimumResponseTime = this.options.minimumResponseTime;
 
-		options.includeTimestamp = Optional.ofNullable(session.getParameters().get("include_timestamp"))
-				.filter(args -> !args.isEmpty())
-				.map(args -> Boolean.parseBoolean(args.get(0)))
-				.orElse(this.options.includeTimestamp);
+		final Map<String, Deque<String>> queryParams = exchange.getQueryParameters();
 
-		options.minimumResponseTime = Optional.ofNullable(session.getParameters().get("minimum_response_time"))
-				.filter(args -> !args.isEmpty())
-				.map(args -> Math.max(0, Math.min(60000L, Long.parseLong(args.get(0)))))
-				.orElse(this.options.minimumResponseTime);
+		Deque<String> deque = queryParams.get("include_timestamp");
+		if (deque != null) {
+			final String value = deque.getFirst();
+			if (!value.isEmpty()) {
+				options.includeTimestamp = Boolean.parseBoolean(value);
+			}
+		}
+
+		deque = queryParams.get("minimum_response_time");
+		if (deque != null) {
+			final String value = deque.getFirst();
+			if (!value.isEmpty()) {
+				options.minimumResponseTime = Math.max(0, Math.min(60000L, Long.parseLong(value)));
+			}
+		}
 
 		return options;
 	}
 
-	public Response handleGetMetrics(final IHTTPSession session) throws InterruptedException, IOException {
+	public void handleGetMetrics(final HttpServerExchange exchange) throws InterruptedException, IOException {
+
 		final Map<String, JsonNode> labels = makeLabels();
-		final OptionsConfig options = getOptions(session);
+		final OptionsConfig options = getOptions(exchange);
 
 		final Map<String, List<PrometheusMetric>> allMetrics = new TreeMap<>();
 		scraper.scrape(new PrometheusScrapeOutput(RootScope.getInstance(), (metric) -> {
@@ -89,8 +104,10 @@ public class PrometheusExporterServerHandler {
 			allMetrics.computeIfAbsent(metric.name, (name) -> new ArrayList<>()).add(metric);
 		}), options.minimumResponseTime, TimeUnit.MILLISECONDS);
 
-		final StringBuilder builder = new StringBuilder();
+		exchange.getResponseHeaders().add(Headers.CONTENT_TYPE, "text/plain; version=0.0.4; charset=utf-8");
+		exchange.setStatusCode(StatusCodes.OK);
 
+		final StringBuilder builder = new StringBuilder();
 		try (PrometheusMetricWriter pwriter = new PrometheusMetricWriter(builder, options.includeTimestamp)) {
 			allMetrics.forEach((name, metrics) -> {
 				final Set<String> helps = new HashSet<>();
@@ -108,12 +125,35 @@ public class PrometheusExporterServerHandler {
 			});
 		}
 
-		return PrometheusExporterServer.newFixedLengthResponse(Response.Status.OK, "text/plain; version=0.0.4; charset=utf-8", builder.toString());
+		exchange.getResponseSender().send(builder.toString());
 	}
 
-	public Response handleGetMetricsJson(final IHTTPSession session) throws InterruptedException {
-		final StringWriter writer = new StringWriter();
-		scraper.scrape(new PrometheusScrapeOutput(RootScope.getInstance(), (metric) -> {})); // FIXME
-		return PrometheusExporterServer.newFixedLengthResponse(Response.Status.OK, "text/plain; charset=utf-8", writer.toString());
+	@Override
+	public void handleRequest(final HttpServerExchange exchange) throws Exception {
+		try {
+			switch (exchange.getRequestPath()) {
+			case "/metrics":
+				if (!exchange.getRequestMethod().equalToString("GET")) {
+					exchange.setStatusCode(StatusCodes.METHOD_NOT_ALLOWED);
+					return;
+				}
+				handleGetMetrics(exchange);
+				break;
+			default:
+				exchange.setStatusCode(StatusCodes.NOT_FOUND);
+				break;
+			}
+		} catch (Throwable th) {
+			exchange.setStatusCode(StatusCodes.INTERNAL_SERVER_ERROR);
+			try (ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
+				try (PrintWriter writer = new PrintWriter(baos)) {
+					th.printStackTrace(writer);
+				}
+				exchange.getResponseHeaders().add(Headers.CONTENT_TYPE, "text/plain; charset=utf-8");
+				exchange.getResponseSender().send(ByteBuffer.wrap(baos.toByteArray()));
+			}
+		} finally {
+			exchange.endExchange();
+		}
 	}
 }
